tests/ui/attributes/key-value-non-ascii.stderr
error: non-ASCII character in byte string literal
  --> $DIR/key-value-non-ascii.rs:3:19
   |
LL | #[rustc_dummy = b"ﬃ.rs"]
   |                   ^ must be ASCII
   |
help: if you meant to use the UTF-8 encoding of 'ﬃ', use \xHH escapes
   |
LL - #[rustc_dummy = b"ﬃ.rs"]
LL + #[rustc_dummy = b"/xEF/xAC/x83.rs"]
   |

error: aborting due to 1 previous error

